<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fons"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center|center_vertical"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical" >

        
  	<TextView
    	android:id="@+id/nivells"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/levels"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="100dp" />

 	<TableRow
    	android:id="@+id/fila2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
  	    <Button
    		android:id="@+id/btt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivel1"
            android:textSize="35dp" />
	</TableRow>

    <TableRow
    	android:id="@+id/fila3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <Button
        	android:id="@+id/btt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivel2"
            android:textSize="35dp" />
	</TableRow>
	<TableRow
    	android:id="@+id/fila4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
     	<Button
        	android:id="@+id/btt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivel3"
            android:textSize="35dp" />
	</TableRow>

</LinearLayout>