<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fons"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/bomba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/bomba" />

    <TextView
        android:id="@+id/mineSweeper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/mine"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50dp" />

    <Button
        android:id="@+id/per"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bomba"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:text="@string/options"
        android:textSize="20dp" />

    <Button
        android:id="@+id/jugar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/per"
        android:layout_alignLeft="@+id/per"
        android:text="@string/play"
        android:textSize="25dp" />

    <Button
        android:id="@+id/exit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/per"
        android:layout_alignTop="@+id/per"
        android:layout_marginTop="54dp"
        android:text="@string/exit"
        android:textSize="25dp" />

</RelativeLayout>