<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:text="@string/options"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50dp" />

    <SeekBar
        android:id="@+id/level"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/options"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp" />

    <TextView
        android:id="@+id/leveltxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/level"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:text="@string/levels"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/boxesX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/options"
        android:layout_below="@+id/level"
        android:layout_marginTop="39dp"
        android:layout_toRightOf="@+id/leveltxt"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/boxesY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/boxesX"
        android:layout_alignRight="@+id/boxesX"
        android:layout_below="@+id/boxesX"
        android:inputType="number" />

    <TextView
        android:id="@+id/boxesXtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/boxesX"
        android:layout_alignBottom="@+id/boxesX"
        android:layout_alignLeft="@+id/options"
        android:text="@string/boxesX"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/boxesYtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/boxesY"
        android:layout_alignBottom="@+id/boxesY"
        android:layout_alignRight="@+id/boxesXtxt"
        android:text="@string/boxesY"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/max1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/boxesXtxt"
        android:layout_alignRight="@+id/level"
        android:text="@string/max25"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/max2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/boxesY"
        android:layout_alignLeft="@+id/max1"
        android:text="@string/max25"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/play"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:text="@string/play"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/lvlName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/level"
        android:layout_centerHorizontal="true"
        android:text="@string/heaven"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>